commit final du projet